# sigil

./: CONTRIBUTING.md  Cargo.toml  README.md  SIGIL_LAUNCH_STRATEGY.html
.github/workflows/: ci.yml
examples/: basic_mcp_server.rs
spec/: 06-handshake.md  07-registry.md
src/: audit.rs  identity.rs  lib.rs  mcp_server.rs  policy.rs  registry.rs  scanner.rs  sigil_envelope.rs  vault.rs
