[package]
name = "sigil-protocol"
version = "0.1.3"
edition = "2021"
description = "SIGIL — Sovereign Identity-Gated Interaction Layer. An open protocol for securing AI agent-to-tool interactions."
license = "EUPL-1.2"
# Commercial licence available — see LICENSE-COMMERCIAL or https://sigil-protocol.org
repository = "https://github.com/sigil-eu/sigil"
homepage = "https://sigil-protocol.org"
documentation = "https://docs.rs/sigil-protocol"
readme = "README.md"
keywords = ["security", "identity", "agent", "mcp", "protocol"]
categories = ["authentication", "cryptography"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
base64ct = { version = "1", features = ["alloc"] }
hex = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
